--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -2596,6 +2596,7 @@
 	<string id="WINDOW_MEDIA" value="Media Player"/>
 	<string id="WINDOW_SEARCHPAD" value="Search"/>
 	<string id="WINDOW_HELP" value="Shareaza Help"/>
+	<string id="WINDOW_IRC" value="Shareaza Chat"/>
 	<string id="7000" value="Are you sure you want to delete this filter ?"/>
 	<string id="7001" value="&amp;Schemas"/>
 	<string id="7002" value="Multiple Values"/>
@@ -3076,6 +3077,13 @@
 	<string id="16997" value="There is no file playing. Double-click a media file in your library to play it."/>
 	<string id="16998" value="S &#160; &#160; H &#160; &#160; A &#160; &#160; R &#160; &#160; E &#160; &#160; A &#160; &#160; Z &#160; &#160; A &#160; &#160; &#160; &#160; &#160; M &#160; &#160; E &#160; &#160; D &#160; &#160; I &#160; &#160; A &#160; &#160; &#160; &#160; &#160; S &#160; &#160; Y &#160; &#160; S &#160; &#160; T &#160; &#160; E &#160; &#160; M"/><!-- on one line -->
 	<string id="16999" value="P L A Y L I S T"/>
+	<string id="17017" value="Chat!"/>
+	<string id="17018" value="Welcome to Shareaza Chat!"/>
+	<string id="17019" value="Please respect others while using this service"/>
+	<string id="17020" value="Add"/>
+	<string id="17021" value="Remove"/>
+	<string id="17022" value="Users"/>
+	<string id="17023" value="Channels"/>
 	<string id="17024" value="Initiating a connection to %s..."/>
 	<string id="17025" value="Unable to create a connection to %s."/>
 	<string id="17026" value="Requesting a firewalled push connection from %s..."/>
@@ -4426,6 +4434,12 @@
 		<control/>
 		<control caption="OK"/>
 		<control caption="Cancel"/>
+	</dialog>
+	<dialog name="CIrcInputDlg" cookie="EdBuBuSt" caption="Channel Name|Why reason">
+		<control/>
+		<control caption="OK"/>
+		<control caption="Cancel"/>
+		<control caption="Enter channel you want to add:|Enter kick/ban reason:"/>
 	</dialog>
 </dialogs>
 <!-- Columns Definitions -->
