Translated missing part
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7344 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -1877,9 +1877,9 @@
 		<gap size="4"/>
 		<text>Jūsų profilio, pokalbių ir skubiųjų žinučių nuostatos.</text>
 		<newline gap="10"/>
-		<link target="raza:page:CIRCSettingsPage" format="b">IRC:</link>
+		<link target="raza:page:CIRCSettingsPage" format="b">Pokalbiai:</link>
 		<gap size="4"/>
-		<text>IRC chatroom visual appearance and connection settings.</text>
+		<text>IRC pokalbių kanalų išvaizda ir susijugimo nuostatos.</text>
 		<newline gap="10"/>
 		<link target="raza:page:CWebSettingsPage" format="b">Žiniatinklis:</link>
 		<gap size="4"/>
